# dnsfun

./: Cargo.toml  README.md
src/: handler.rs  main.rs  options.rs
